[package]
name = "retrier"
version = "0.2.0"
authors = ["softprops <d.tangren@gmail.com>", "Ifiok Jr. <ifiokotung@gmail.com>"]
description = "A wasm-compatible retry library for futures"
edition = "2021"
documentation = "https://docs.rs/retrier"
homepage = "https://github.com/ifiokjr/retrier"
repository = "https://github.com/ifiokjr/retrier"
keywords = ["retry", "futures", "futures-retry"]
license = "MIT"
readme = "README.md"
categories = ["asynchronous", "wasm", "web-programming"]
rust-version = "1.70.0"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["dep:log", "dep:rand"]
wasm-bindgen = ["getrandom/js", "futures-timer/wasm-bindgen"]

[dependencies]
log = { version = "0.4", optional = true }
rand = { version = "0.8", optional = true }
getrandom = { version = "0.2", optional = true }
futures-timer = { version = "3" }

[dev-dependencies]
approx = "0.5"
pretty_env_logger = "0.5"
reqwest = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints.rust]
# Group lints
rust_2021_compatibility = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "deny", priority = -1 }

# Individual lints
unsafe_code = "forbid"
unstable_features = "deny"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[lints.clippy]
# Group lints
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Individual lints
blocks_in_conditions = "allow"
cargo_common_metadata = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
expl_impl_clone_on_copy = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
no_effect_underscore_binding = "allow"
tabs-in-doc-comments = "allow"
too_many_lines = "allow"
wildcard_dependencies = "deny"
wildcard_imports = "allow"
